[gd_scene load_steps=21 format=3 uid="uid://dvbgf6drv86br"]

[ext_resource type="PackedScene" uid="uid://cwiu8nsyij4gn" path="res://data/player/player.tscn" id="1_tnv5a"]
[ext_resource type="Script" path="res://data/scripts/world.gd" id="1_x87ln"]
[ext_resource type="Texture2D" uid="uid://bfmbndv1sge56" path="res://data/sky.exr" id="3_5hgqm"]
[ext_resource type="PackedScene" uid="uid://b2goh4jnuim3h" path="res://scenes/puck.tscn" id="3_fbcu4"]
[ext_resource type="Texture2D" uid="uid://ds2ixfmbcjs2p" path="res://textures/rink.png" id="4_1f7cw"]
[ext_resource type="PackedScene" uid="uid://culbku3dtv60u" path="res://scenes/net.tscn" id="4_kdsdc"]
[ext_resource type="Texture2D" uid="uid://dmp8diak8bgui" path="res://textures/boards.png" id="5_od0dg"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_6bxyf"]
panorama = ExtResource("3_5hgqm")

[sub_resource type="Sky" id="Sky_cvyow"]
sky_material = SubResource("PanoramaSkyMaterial_6bxyf")

[sub_resource type="Environment" id="Environment_xj5u1"]
background_mode = 2
sky = SubResource("Sky_cvyow")
ssao_enabled = true
fog_light_energy = 0.1
volumetric_fog_enabled = true
volumetric_fog_density = 0.02

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lm2dc"]
albedo_texture = ExtResource("4_1f7cw")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jvui3"]
albedo_texture = ExtResource("5_od0dg")
uv1_scale = Vector3(-19.86, 0.93, 0)
uv1_offset = Vector3(0.825, 0.3, 4.3)
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sim6v"]
albedo_texture = ExtResource("5_od0dg")
uv1_scale = Vector3(1, 0.93, -52.555)
uv1_offset = Vector3(0, 0.3, 0)
uv1_triplanar = true

[sub_resource type="Curve3D" id="Curve3D_taokc"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -10.1154, 0, 18.4965, 0, 0, 0, 0, 0, 0, -10.1155, 0, 18.5155, 0, 0, 0, 0, 0, 0, -10.1137, 0, 18.5899, 0, 0, 0, 0, 0, 0, -10.112, 0, 18.7142, 0, 0, 0, 0, 0, 0, -10.0924, 0, 19.0468, 0, 0, 0, 0, 0, 0, -10.0368, 0, 19.4237, 0, 0, 0, 0, 0, 0, -9.96531, 0, 19.7781, 0, 0, 0, 0, 0, 0, -9.86625, 0, 20.1763, 0, 0, 0, 0, 0, 0, -9.76707, 0, 20.5453, 0, 0, 0, 0, 0, 0, -9.61364, 0, 20.9318, 0, 0, 0, 0, 0, 0, -9.38646, 0, 21.3397, 0, 0, 0, 0, 0, 0, -8.76065, 0, 22.1875, 0, 0, 0, 0, 0, 0, -8.39015, 0, 22.5902, 0, 0, 0, 0, 0, 0, -7.94249, 0, 22.9915, 0, 0, 0, 0, 0, 0, -7.53941, 0, 23.2813, 0, 0, 0, 0, 0, 0, -7.09917, 0, 23.5546, 0, 0, 0, 0, 0, 0, -6.74542, 0, 23.7174, 0, 0, 0, 0, 0, 0, -6.32129, 0, 23.8495, 0, 0, 0, 0, 0, 0, -5.8452, 0, 23.901, 0, 0, 0, 0, 0, 0, -5.53016, 0, 23.9014, 0, 0, 0, 0, 0, 0, -5.51817, 0, 23.9016, 0, 0, 0, 0, 0, 0, -5.50691, 0, 23.9016, 0, 0, 0, 0, 0, 0, -5.49343, 0, 23.9017),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 23

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jcrai"]
albedo_texture = ExtResource("5_od0dg")
uv1_scale = Vector3(1.22, 0.93, 0.01)
uv1_offset = Vector3(1.01, -0.165, 2.05)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="Curve3D" id="Curve3D_k5d8d"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 5.47105, 0, 23.8009, 0, 0, 0, 0, 0, 0, 5.49995, 0, 23.8008, 0, 0, 0, 0, 0, 0, 5.70904, 0, 23.7926, 0, 0, 0, 0, 0, 0, 5.91026, 0, 23.7788, 0, 0, 0, 0, 0, 0, 6.03603, 0, 23.7639, 0, 0, 0, 0, 0, 0, 6.26851, 0, 23.6958, 0, 0, 0, 0, 0, 0, 6.62006, 0, 23.5597, 0, 0, 0, 0, 0, 0, 6.9802, 0, 23.3945, 0, 0, 0, 0, 0, 0, 7.40743, 0, 23.1614, 0, 0, 0, 0, 0, 0, 7.82372, 0, 22.8678, 0, 0, 0, 0, 0, 0, 8.1677, 0, 22.5743, 0, 0, 0, 0, 0, 0, 8.55217, 0, 22.2061, 0, 0, 0, 0, 0, 0, 8.84106, 0, 21.8397, 0, 0, 0, 0, 0, 0, 9.10311, 0, 21.442, 0, 0, 0, 0, 0, 0, 9.32652, 0, 21.0224, 0, 0, 0, 0, 0, 0, 9.53237, 0, 20.5983, 0, 0, 0, 0, 0, 0, 9.7013, 0, 20.0822, 0, 0, 0, 0, 0, 0, 9.84219, 0, 19.5603, 0, 0, 0, 0, 0, 0, 9.93067, 0, 19.2227, 0, 0, 0, 0, 0, 0, 10.0076, 0, 18.8763, 0, 0, 0, 0, 0, 0, 10.0296, 0, 18.7146, 0, 0, 0, 0, 0, 0, 10.0328, 0, 18.6336, 0, 0, 0, 0, 0, 0, 10.0323, 0, 18.5742, 0, 0, 0, 0, 0, 0, 10.0315, 0, 18.5187, 0, 0, 0, 0, 0, 0, 10.0315, 0, 18.4917),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 25

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tfx5t"]
albedo_texture = ExtResource("5_od0dg")
uv1_scale = Vector3(1.22, 0.93, 0.01)
uv1_offset = Vector3(0, 0.835, 0)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="Curve3D" id="Curve3D_1yx2w"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -10.2933, 0, -0.0204331, 0, 0, 0, 0, 0, 0, -10.3341, 0, 18.8355, 0, 0, 0, 0, 0, 0, -10.3008, 0, 19.259, 0, 0, 0, 0, 0, 0, -10.1812, 0, 19.7472, 0, 0, 0, 0, 0, 0, -10.0821, 0, 20.2175, 0, 0, 0, 0, 0, 0, -9.93341, 0, 20.7219, 0, 0, 0, 0, 0, 0, -9.72001, 0, 21.194, 0, 0, 0, 0, 0, 0, -9.44235, 0, 21.6224, 0, 0, 0, 0, 0, 0, -9.12602, 0, 22.0018, 0, 0, 0, 0, 0, 0, -8.8444, 0, 22.3848, 0, 0, 0, 0, 0, 0, -8.49256, 0, 22.7294, 0, 0, 0, 0, 0, 0, -8.1421, 0, 23.0963, 0, 0, 0, 0, 0, 0, -7.75431, 0, 23.4267, 0, 0, 0, 0, 0, 0, -7.26932, 0, 23.7241, 0, 0, 0, 0, 0, 0, -6.87486, 0, 23.9311, 0, 0, 0, 0, 0, 0, -6.42866, 0, 24.0604, 0, 0, 0, 0, 0, 0, -6.00187, 0, 24.138, 0, 0, 0, 0, 0, 0, -5.51042, 0, 24.1832, 0, 0, 0, 0, 0, 0, -5.16769, 0, 24.1832, 0, 0, 0, 0, 0, 0, 5.36949, 0, 24.2347, 0, 0, 0, 0, 0, 0, 5.87357, 0, 24.2132, 0, 0, 0, 0, 0, 0, 6.67531, 0, 23.9586, 0, 0, 0, 0, 0, 0, 7.56416, 0, 23.4938, 0, 0, 0, 0, 0, 0, 8.49534, 0, 22.7307, 0, 0, 0, 0, 0, 0, 9.13291, 0, 21.9683, 0, 0, 0, 0, 0, 0, 9.5511, 0, 21.2928, 0, 0, 0, 0, 0, 0, 9.88702, 0, 20.4515, 0, 0, 0, 0, 0, 0, 10.1413, 0, 19.7056, 0, 0, 0, 0, 0, 0, 10.26, 0, 19.1886, 0, 0, 0, 0, 0, 0, 10.3108, 0, 18.5275, 0, 0, 0, 0, 0, 0, 10.3154, 0, 18.0526, 0, 0, 0, 0, 0, 0, 10.2755, 0, -18.2872, 0, 0, 0, 0, 0, 0, 10.264, 0, -18.8637, 0, 0, 0, 0, 0, 0, 10.2968, 0, -19.4757, 0, 0, 0, 0, 0, 0, 10.1701, 0, -20.1366, 0, 0, 0, 0, 0, 0, 9.8999, 0, -20.8765, 0, 0, 0, 0, 0, 0, 9.52469, 0, -21.5889, 0, 0, 0, 0, 0, 0, 9.04951, 0, -22.1621, 0, 0, 0, 0, 0, 0, 8.37692, 0, -22.8117, 0, 0, 0, 0, 0, 0, 7.6909, 0, -23.4358, 0, 0, 0, 0, 0, 0, 6.92156, 0, -23.8657, 0, 0, 0, 0, 0, 0, 6.12205, 0, -24.0995, 0, 0, 0, 0, 0, 0, 5.48093, 0, -24.175, 0, 0, 0, 0, 0, 0, 5.17168, 0, -24.19, 0, 0, 0, 0, 0, 0, 4.90015, 0, -24.19, 0, 0, 0, 0, 0, 0, -5.35011, 0, -24.2174, 0, 0, 0, 0, 0, 0, -5.70461, 0, -24.2174, 0, 0, 0, 0, 0, 0, -6.29293, 0, -24.1043, 0, 0, 0, 0, 0, 0, -6.89768, 0, -23.8737, 0, 0, 0, 0, 0, 0, -7.3306, 0, -23.6335, 0, 0, 0, 0, 0, 0, -7.82087, 0, -23.3318, 0, 0, 0, 0, 0, 0, -8.18291, 0, -23.0376, 0, 0, 0, 0, 0, 0, -8.59204, 0, -22.6776, 0, 0, 0, 0, 0, 0, -8.97695, 0, -22.2572, 0, 0, 0, 0, 0, 0, -9.30883, 0, -21.7971, 0, 0, 0, 0, 0, 0, -9.58319, 0, -21.3241, 0, 0, 0, 0, 0, 0, -9.80757, 0, -20.7785, 0, 0, 0, 0, 0, 0, -10.0034, 0, -20.2537, 0, 0, 0, 0, 0, 0, -10.1338, 0, -19.6927, 0, 0, 0, 0, 0, 0, -10.2495, 0, -19.1784, 0, 0, 0, 0, 0, 0, -10.3191, 0, -18.6619, 0, 0, 0, 0, 0, 0, -10.3231, 0, -18.3292, 0, 0, 0, 0, 0, 0, -10.3167, 0, -17.9663, 0, 0, 0, 0, 0, 0, -10.2933, 0, -0.0235287),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 64

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fvu5a"]
transparency = 1
albedo_color = Color(0.768627, 0.921569, 0.996078, 0.482353)
rim_enabled = true
rim = 0.1
rim_tint = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1vn1h"]
albedo_color = Color(0, 0, 0, 1)

[node name="world" type="Node3D"]
script = ExtResource("1_x87ln")
player_scene = ExtResource("1_tnv5a")

[node name="environment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_xj5u1")

[node name="sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.933167, 0.309878, -0.182139, 0, 0.506726, 0.862107, 0.359443, -0.80449, 0.47286, 0, 0, 0)
shadow_enabled = true

[node name="geometry" type="Node3D" parent="."]

[node name="Net" parent="geometry" instance=ExtResource("4_kdsdc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.119, -0.5, 20.689)

[node name="Net2" parent="geometry" instance=ExtResource("4_kdsdc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, -20.51)

[node name="Ice" type="CSGBox3D" parent="geometry"]
use_collision = true
size = Vector3(20.4, 0.25, 48)
material = SubResource("StandardMaterial3D_lm2dc")

[node name="Left Board" type="CSGBox3D" parent="geometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.41, 0.5, 0)
use_collision = true
size = Vector3(1, 1.5, 37)
material = SubResource("StandardMaterial3D_jvui3")

[node name="Right Board" type="CSGBox3D" parent="geometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.416, 0.5, 0)
use_collision = true
size = Vector3(1, 1.5, 37)
material = SubResource("StandardMaterial3D_jvui3")

[node name="Top Board" type="CSGBox3D" parent="geometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 24.18)
use_collision = true
size = Vector3(11, 1.5, 1)
material = SubResource("StandardMaterial3D_sim6v")

[node name="Back Board" type="CSGBox3D" parent="geometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -24.182)
use_collision = true
size = Vector3(11, 1.5, 1)
material = SubResource("StandardMaterial3D_sim6v")

[node name="Path3D" type="Path3D" parent="geometry"]
rotation_edit_mode = 1
curve = SubResource("Curve3D_taokc")

[node name="corner 1" type="CSGPolygon3D" parent="geometry/Path3D"]
transform = Transform3D(1, 0, 0, 0, 1.25, 0, 0, 0, 1, 0.191, 0, -0.219)
use_collision = true
mode = 2
path_node = NodePath("..")
path_interval_type = 1
path_interval = 1.35
path_simplify_angle = 0.0
path_rotation = 1
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
material = SubResource("StandardMaterial3D_jcrai")

[node name="corner 2" type="CSGPolygon3D" parent="geometry/Path3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1.25, 0, 8.74228e-08, 0, -1, -0.2, 0, 0.215)
use_collision = true
mode = 2
path_node = NodePath("..")
path_interval_type = 1
path_interval = 1.35
path_simplify_angle = 0.0
path_rotation = 1
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
material = SubResource("StandardMaterial3D_jcrai")

[node name="Path3D2" type="Path3D" parent="geometry"]
curve = SubResource("Curve3D_k5d8d")

[node name="corner 3" type="CSGPolygon3D" parent="geometry/Path3D2"]
transform = Transform3D(1, 0, 0, 0, 1.25, 0, 0, 0, 1, -0.115, 0, -0.115)
use_collision = true
mode = 2
path_node = NodePath("..")
path_interval_type = 1
path_interval = 1.35
path_simplify_angle = 0.0
path_rotation = 1
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
material = SubResource("StandardMaterial3D_tfx5t")

[node name="corner 4" type="CSGPolygon3D" parent="geometry/Path3D2"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1.25, 0, 8.74228e-08, 0, -1, 0.11, 0, 0.115)
use_collision = true
mode = 2
path_node = NodePath("..")
path_interval_type = 1
path_interval = 1.35
path_simplify_angle = 0.0
path_rotation = 1
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = false
material = SubResource("StandardMaterial3D_tfx5t")

[node name="Path3D3" type="Path3D" parent="geometry"]
transform = Transform3D(0.99, 0, 0, 0, 0.99, 0, 0, 0, 0.99, 0, 0, 0)
curve = SubResource("Curve3D_1yx2w")

[node name="glass" type="CSGPolygon3D" parent="geometry/Path3D3"]
transform = Transform3D(1, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0.86, 0)
use_collision = true
polygon = PackedVector2Array(0, 0, 0, 1, 0.5, 1, 0.5, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 2.0
path_rotation = 2
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = true
material = SubResource("StandardMaterial3D_fvu5a")

[node name="glass rim top" type="CSGPolygon3D" parent="geometry/Path3D3"]
transform = Transform3D(1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 3.85985, 0)
use_collision = true
polygon = PackedVector2Array(0, 0, 0, 1, 0.5, 1, 0.5, 0)
mode = 2
path_node = NodePath("..")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 2.0
path_rotation = 2
path_local = true
path_continuous_u = true
path_u_distance = 1.0
path_joined = true
material = SubResource("StandardMaterial3D_1vn1h")

[node name="Menu Canvas" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="Menu Canvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 462.0
offset_top = 229.0
offset_right = -462.0
offset_bottom = -228.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu Canvas/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Menu Canvas/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Menu Canvas/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Host Button" type="Button" parent="Menu Canvas/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join Button" type="Button" parent="Menu Canvas/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEnter" type="LineEdit" parent="Menu Canvas/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address"
alignment = 1

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://data/player/player.tscn")
spawn_path = NodePath("..")

[node name="PuckScene" parent="." instance=ExtResource("3_fbcu4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0366935, 0.386818, 20.8972)

[node name="PuckScene2" parent="." instance=ExtResource("3_fbcu4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)

[node name="PuckScene3" parent="." instance=ExtResource("3_fbcu4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, -1)

[connection signal="pressed" from="Menu Canvas/MainMenu/MarginContainer/VBoxContainer/Host Button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Menu Canvas/MainMenu/MarginContainer/VBoxContainer/Join Button" to="." method="_on_join_button_pressed"]
